// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StarRatingFieldTransformer Render rating 0 (snapshot) 1`] = `
<div>
  <span
    class="container"
    title="0/5"
  >
    <span
      class="starsWrapper"
    >
      <span
        class="starsBackground"
      >
        <span
          class="starIcon"
        >
          ★
        </span>
        <span
          class="starIcon"
        >
          ★
        </span>
        <span
          class="starIcon"
        >
          ★
        </span>
        <span
          class="starIcon"
        >
          ★
        </span>
        <span
          class="starIcon"
        >
          ★
        </span>
      </span>
      <span
        class="starsForeground"
        style="width:0%"
      >
        <span
          class="starIcon"
        >
          ★
        </span>
        <span
          class="starIcon"
        >
          ★
        </span>
        <span
          class="starIcon"
        >
          ★
        </span>
        <span
          class="starIcon"
        >
          ★
        </span>
        <span
          class="starIcon"
        >
          ★
        </span>
      </span>
    </span>
    <span
      class="value"
    >
      (0/5)
    </span>
  </span>
</div>
`;

exports[`StarRatingFieldTransformer Render rating 3/5 (snapshot) 1`] = `
<div>
  <span
    class="container"
    title="3/5"
  >
    <span
      class="starsWrapper"
    >
      <span
        class="starsBackground"
      >
        <span
          class="starIcon"
        >
          ★
        </span>
        <span
          class="starIcon"
        >
          ★
        </span>
        <span
          class="starIcon"
        >
          ★
        </span>
        <span
          class="starIcon"
        >
          ★
        </span>
        <span
          class="starIcon"
        >
          ★
        </span>
      </span>
      <span
        class="starsForeground"
        style="width:60%"
      >
        <span
          class="starIcon"
        >
          ★
        </span>
        <span
          class="starIcon"
        >
          ★
        </span>
        <span
          class="starIcon"
        >
          ★
        </span>
        <span
          class="starIcon"
        >
          ★
        </span>
        <span
          class="starIcon"
        >
          ★
        </span>
      </span>
    </span>
    <span
      class="value"
    >
      (3/5)
    </span>
  </span>
</div>
`;
